q5 done with comments

--- a/q5.md
+++ b/q5.md
@@ -1,1 +1,10 @@
+Question 1:
 
+Aproach 1: Defines a function doubleL(n) that takes an int 'n' as input. It generates a list containing the  values of numbers from 0 to n-1 times by 2. It then iterates over this list and prints each value followed by a colon :
+
+Aproach 2: This approach directly uses a list to generate another list containing the values multipled by 2 of the numbers 0 to 4. It then iterates over the list and prints each value followed by a colon :.
+
+Apraoch 3: This approach defines a generator function doubleG(n). It generates values that are the numbers from 0 to n-1 multiplied by 2 using the yield keyword, which creates a generator object. It then iterates over this generator object and prints each value followed by a colon :
+
+Question 2:
+doubleG(n) is a generator function, the advantages of using this is that it will generate the values 1 at a time and is unlike a list which genreates them all at onces, it also doesnt use memory and store values like a list would, meaning it is more memory efficient then a list, which means when working with large data it performs better.
